# vulcan

./: CMakeLists.txt  Pipeline.cpp  Pipeline.h  Window.cpp  Window.h  device.cpp  device.h  files.cpp  main.cpp
.github/workflows/: qodana_code_quality.yml
buildscripts/: compile-shaders.py
pipeline/: FragmentStageParamsBuilder.cpp  FragmentStageParamsBuilder.h  PipelineBuilder.cpp  PipelineBuilder.h  VertexStageParamsBuilder.cpp  VertexStageParamsBuilder.h  builders.h
src/: Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Pipeline.cpp  Pipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  Window.cpp  Window.h  device.h  files.cpp  files.h  main.cpp  shaders.cpp  shaders.h  swap_chain.cpp  swap_chain.h  swapchain_choices.cpp  swapchain_choices.h  utils.cpp  utils.h
src/pipeline/: FragmentStageParamsBuilder.cpp  PipelineBuilder.cpp  PipelineBuilder.h  PipelineColorBlendStateBuilder.cpp  PipelineColorBlendStateBuilder.h  PipelineDepthStencilStateBuilder.cpp  PipelineDepthStencilStateBuilder.h  PipelineInputAssemblyStateBuilder.cpp  PipelineInputAssemblyStateBuilder.h  PipelineLayoutBuilder.cpp  PipelineLayoutBuilder.h  PipelineMultisampleStateBuilder.cpp  PipelineMultisampleStateBuilder.h  PipelineRasterizationStateBuilder.cpp  PipelineRasterizationStateBuilder.h  PipelineVertexInputStateBuilder.cpp  PipelineVertexInputStateBuilder.h  PipelineViewportStateBuilder.cpp  PipelineViewportStateBuilder.h  VertexStageParamsBuilder.cpp  VertexStageParamsBuilder.h  builders.h
src/shaders/: shader.vert
